<resources>
    <string name="app_name">제자리입니다만?</string>
    <string name="학번">&#160;학번</string>
    <string name="비밀번호">&#160;비밀번호</string>
    <string name="login">Login</string>
    <string name="attendButton">출석 체크</string>
    <string name="reservationButton">스터디룸 예약</string>
    <string name="settingButton">설정 메뉴</string>
    <string name="title_activity_main_home">Home</string>
    <string name="title_activity_main_reservation">스터디룸 예약하기</string>
    <string name="title_activity_main_setting">설정</string>
    <string name="title_nav_bottom_home">Home</string>
    <string name="title_activity_faq">FAQ</string>
    <string name="title_activity_AttendBtn">출석체크</string>
    <string name="title_nav_bottom_dashboard">Dashboard</string>
    <string name="title_nav_bottom_notifications">Notifications</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">세종대학교</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_text1">Home</string>
    <string name="drawer_text2">예약하기</string>
    <string name="drawer_text3">내 예약 현황(출첵)</string>
    <string name="drawer_text4">FAQ</string>
    <string name="drawer_text5">환경설정</string>
    <string name="reservation_main_notice">예약할 날짜와 시간을 선택해주세요</string>
    <string name="reservation_notice_textView_step1">검색된 스터디룸 중 원하는 스터디룸을 선택해주세요</string>
    <string name="reservation_notice_textView_step2">예약할 내용을 확인해주세요.</string>
    <string name="tab_home">Home</string>
    <string name="tab_logout">Logout</string>
    <string name="reservation_start_time">입실 시간</string>
    <string name="reservation_finish_time">사용 시간</string>
    <string name="reservation_people">사용 인원</string>
    <string name="next">다음</string>
    <string name="reservation">예약하기</string>
    <string name="autoLogin">자동 로그인</string>
    <string name="login_title">제자리입니다만</string>
    <string name="alarm_Setting_Switch">Switch</string>
    <string name="settings_logout">메뉴 선택</string>
    <string name="faq_text_detail">faq_text_detail</string>
    <string name="faq_text_title">faq_text_title</string>
    <string name="nav_header_time_text">현재시간</string>
    <string name="nav_header_std_text">학번 이름</string>
    <string name="drawer_menu_info_title">사용자 정보</string>
    <string name="logout_Popup_Title">로그아웃</string>
    <string name="logout_Popup_Text">로그아웃하시겠습니까?</string>
    <string name="logout_Popup_OkBtn">확인</string>
    <string name="logout_Popup_CancelBtn">취소</string>
    <string name="reservation_Selected_RoomName">스터디룸명/위치 : </string>
    <string name="reservation_Selected_ReservationTime">예약 시간 : </string>
    <string name="reservation_Selected_ReservationDay">예약 날짜 : </string>
    <string name="reservation_Selected_RoomMinFull">스터디룸 수용인원 : </string>
    <string name="reservation_Selected_UserName">대표자 이름 : </string>
    <string name="reservation_Selected_StdNum">대표자 학번 : </string>
    <string name="reservation_Selected_Major">대학/학과 :</string>
    <string name="reservation_Selected_Phone">연락처 :</string>
    <string name="reservation_Selected_Email">이메일 :</string>
    <string name="blank">""</string>
    <string name="reservation_people_index">명</string>
    <string name="temp_attend_title">예약현황/출석체크</string>
    <string name="temp_attend_detail_title">상세예약현황</string>
    <string name="server_ip">218.156.130.28</string>
    <string name="myreservation_title">예약날짜 및 시간</string>
    <string name="myreservation_time">스터디룸 이름</string>
    <string name="myreservation_button">가변 버튼</string>
    <string name="myreservation_detail_atcheck_text">출석가능여부 : </string>
    <string name="home_time_now_notice">현재시간 :</string>
    <string name="home_welcome_text">졔 자리입니다만?</string>

</resources>
