<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_attend"
            android:title="@string/drawer_text1" />
        <item
            android:id="@+id/drawer_menu_reservation"
            android:title="@string/drawer_text2" />
        <item
            android:id="@+id/drawer_menu_myreservation"
            android:title="@string/drawer_text3" />
        <item
            android:id="@+id/drawer_menu_FAQ"
            android:title="@string/drawer_text4" />
        <item
            android:id="@+id/drawer_menu_settings"
            android:title="@string/drawer_text5" />
    </group>

</menu>
