<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#eeeeee"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/logout_Popup_Title"
            android:layout_width="match_parent"
            android:layout_height="53sp"
            android:background="#364141"
            android:gravity="center"
            android:text="@string/logout_Popup_Title"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>



    <LinearLayout
        android:padding="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/logout_Popup_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:gravity="center"
            android:text="@string/logout_Popup_Text"
            android:textColor="#000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtText2"
            android:textSize="15sp"
            android:textColor="#000"
            android:gravity="center"
            android:layout_marginBottom="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/logout_Popup_OkBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:onClick="mOk"
            android:text="@string/logout_Popup_OkBtn"
            android:textSize="20sp" />

        <Button
            android:id="@+id/logout_Popup_CancelBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="128dp"
            android:layout_height="wrap_content"
            android:onClick="mCancel"
            android:text="@string/logout_Popup_CancelBtn"
            android:textSize="20sp"/>
    </LinearLayout>
</LinearLayout>