<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activities.MainReservationActivity_step2">

    <TextView
        android:id="@+id/reservation_Notice_TextView_Step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/reservation_notice_textView_step2"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/reservation_Selected_TableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="start"
        android:padding="8dp"
        android:stretchColumns="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservation_Notice_TextView_Step2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reservation_Selected_StdNum_Guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/reservation_Selected_StdNum"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/reservation_Selected_StdNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/reservation_Selected_StdNum"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/reservation_Selected_UserName_Guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/reservation_Selected_UserName"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/reservation_Selected_UserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/reservation_Selected_UserName"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/reservation_Selected_ReservationDay_Guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/reservation_Selected_ReservationDay"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/reservation_Selected_ReservationDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/reservation_Selected_ReservationDay"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="283dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/reservation_Selected_ReservationTime_Guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/reservation_Selected_ReservationTime"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/reservation_Selected_ReservationTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/reservation_Selected_ReservationTime"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/reservation_Selected_RoomName_Guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/reservation_Selected_RoomName"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/reservation_Selected_RoomName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/reservation_Selected_RoomName"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/reservation_Selected_RoomMinFull_Guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/reservation_Selected_RoomMinFull"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/reservation_Selected_RoomMinFull"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/reservation_Selected_RoomMinFull"
                android:textColor="@android:color/black" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/reservation_Selected_Phone_Guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/reservation_Selected_Phone"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/reservation_Selected_Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/reservation_Selected_Phone"
                android:textColor="@android:color/black" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/reservation_Selected_Email_Guide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/reservation_Selected_Email"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/reservation_Selected_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:gravity="start"
                android:text="@string/reservation_Selected_Email"
                android:textColor="@android:color/black" />
        </TableRow>


    </TableLayout>


    <Button
        android:id="@+id/reservation_Selected_Button"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@color/colorSejong"
        android:text="@string/reservation"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNotice_reservation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:lineSpacingExtra="3sp"
        android:text="예약안내"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reservation_Selected_TableLayout" />

</android.support.constraint.ConstraintLayout>